eks_cluster/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: mutuwa12/devsecops_github:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
